# string_benchmark

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml  benchmark.hpp  benchmark_boost_geometry_wkt.cpp  benchmark_ends_with.cpp  benchmark_escape_xml.cpp  benchmark_fmtlib.cpp  benchmark_iends_with.cpp  benchmark_istarts_with.cpp  benchmark_starts_with.cpp  benchmark_stod.cpp  benchmark_stoi.cpp  fixture.cpp  fixture.hpp  generate_graphs.py  string_append.hpp.disabled  test_fixture.cpp
attic/: string_sprintf.hpp
result/: sql_example.md
results/: benchmark_iends_with_gcc484.xlsx  benchmark_iends_with_vs2017.xlsx  benchmark_istarts_with_gcc484.xlsx  benchmark_istarts_with_vs2017.xlsx  gcc63_ends_with.csv  gcc63_ends_with.html  gcc63_escape_xml.csv  gcc63_escape_xml.html  gcc63_iends_with.csv  gcc63_iends_with.html  gcc63_istarts_with.csv  gcc63_istarts_with.html  gcc63_starts_with.csv  gcc63_starts_with.html  gcc63_wends_with.csv  gcc63_wends_with.html  gcc63_wescape_xml.csv  gcc63_wescape_xml.html  gcc63_wiends_with.csv  gcc63_wiends_with.html  gcc63_wistarts_with.csv  gcc63_wistarts_with.html  gcc63_wstarts_with.csv  gcc63_wstarts_with.html  gcc9_geometry_wkt.csv  index.html  vs2017_ends_with.csv  vs2017_ends_with.html  vs2017_escape_xml.csv  vs2017_escape_xml.html  vs2017_fmtlib.csv  vs2017_fmtlib.html  vs2017_iends_with.csv  vs2017_iends_with.html  vs2017_istarts_with.csv  vs2017_istarts_with.html  vs2017_starts_with.csv  vs2017_starts_with.html  vs2017_wends_with.csv  vs2017_wends_with.html  (+11 more)
src/: CMakeLists.txt  benchmark.hpp  fixture.cpp  fixture.hpp  main.cpp  samples.cpp  samples.hpp  string_append.hpp  string_sprintf.hpp  string_starts_with.hpp
